updated past projects to 'past work' to reflect inclusion of non-project experience, made cards components in Vue more abstract to allow their usage in other parts of the website, fixed an issue with the width of the page container so it no longer gives a horizontal scrollbar (who decided to include the scrollbar in the vw unit??) Oh, and fixed the page container height so it scales if a scrollbar is needed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
     --accentStrong: hsl(204, 55%, 61%);
     --accentMid:hsl(207, 40%, 40%);
     --accentStrongLight: hsl(204, 55%, 74%);
-    --max_page_width: 1200px;
+    --max_page_width: 1000px;
 }
 /* ============================= */ 
 /* General styling for the whole document */ 
@@ -50,10 +50,11 @@ a:active {
     color: var(--accentLight)
 }
 #page_container {
-    width: 100vw;
-    height: 100vh;
+    width: calc(100vw - (100vw - 100%));
+    height: 100%;
+    min-height: 100vh;
     max-width: var(--max_page_width);
-    margin: 0 auto;
+    margin: 0px auto;
     border: 0px solid var(--accentDark);
     background-color: var(--lightest);
 }
@@ -156,8 +157,10 @@ main {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    align-items: space-between;
+    align-items: stretch;
     align-content: flex-start;
+    column-gap: 10px;
+    max-width: 100%;
 }
 .card {
     padding: 10px;
@@ -179,11 +182,6 @@ main {
     margin-bottom: 10px;
 }
 
-@media only screen and (min-width:1000px) {
-    /* Enables content border on larger screens, when sides have large margins... useful for debugging, if nothing else */
-
-    /* #content {
-        border-width: 0px 2px;
-    } */
+/* @media only screen and (min-width:1000px) {
     
-}
+} */
